--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5386103875536090"
      crossorigin="anonymous"></script>
     <meta charset="utf-8" />
-    <title>Appeal a ban/title>
+    <title>Appeal a bans</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
@@ -29,7 +29,21 @@
               alt="Discord Logo"
               style="width: 25px; height: 25px"
             />
-          </a
+          </a>
+          <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a href="/support.html" class="nav-link">Support</a>
+              </li>
+              <li class="nav-item">
+                <a href="/bot/index.html" class="nav-link">Discord Bot</a>
+              </li>
+              <li class="nav-item">
+                <a href="https://forms.gle/VisUfiGY2PDFAKPP6" class="nav-link">Report Abuse</a>
+              </li>
+              <li class="nav-item">
+                <a href="https://forms.gle/e6qDdVFTjeib6kPe7" class="nav-link">Add your Server</a>
+              </li>
             </ul>
           </nav>
         </div>
