--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5386103875536090"
      crossorigin="anonymous"></script>
     <meta charset="utf-8" />
-    <title>Appeal a bans</title>
+    <title>Appeal a ban</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
