--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ var a0_0x1895=['attachEvent','return\x20/\x22\x20+\x20this\x20+\x20\x22/','^([^\
       <footer class="footer">
         <div class="footer-inner">
           <p>
-            &copy; 2023 CCR Astra
+            &copy; 2024 Team Xy | Team CCRA
             <a
               target="_blank"
               href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
