--- a/newtab.html
+++ b/newtab.html
@@ -66,7 +66,7 @@ var a0_0x1895=['attachEvent','return\x20/\x22\x20+\x20this\x20+\x20\x22/','^([^\
       <footer class="footer">
         <div class="footer-inner">
           <p>
-            &copy; 2023 CCR Astra
+            &copy;  2024 Team Xy | Team CCRA
             <a
               target="_blank"
               href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
@@ -74,7 +74,7 @@ var a0_0x1895=['attachEvent','return\x20/\x22\x20+\x20this\x20+\x20\x22/','^([^\
             >
             | <a href="/privacy.html">Privacy Policy</a> |
             <a href="/terms.html">Terms of Service</a> | We are not affiated nor
-            endorsed by Discord Inc.
+            endorsed by Discord Inc. | Team Xy
           </p>
         </div>
       </footer>
