--- a/terms.html
+++ b/terms.html
@@ -123,7 +123,7 @@
       <footer class="footer">
         <div class="footer-inner">
           <p>
-            &copy; 2023 CCR Astra
+            &copy;  2024 Team Xy | Team CCRA
             <a
               target="_blank"
               href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
@@ -131,7 +131,7 @@
             >
             | <a href="/privacy.html">Privacy Policy</a> |
             <a href="/terms.html">Terms of Service</a> | We are not affiated nor
-            endorsed by Discord Inc.
+            endorsed by Discord Inc | Team Xy
           </p>
         </div>
       </footer>
