--- a/support.html
+++ b/support.html
@@ -166,7 +166,7 @@
       <footer class="footer">
         <div class="footer-inner">
           <p>
-            &copy; 2023 CCR Astra
+            &copy;  2024 Team Xy | Team CCRA
             <a
 style="text-decoration: none;"
               target="_blank"
@@ -175,7 +175,7 @@ style="text-decoration: none;"
             >
             | <a style="text-decoration: none;" href="/privacy.html">Privacy Policy</a> |
             <a style="text-decoration: none;" href="/terms.html">Terms of Service</a> | We are not affiated nor
-            endorsed by Discord Inc.
+            endorsed by Discord Inc. | Team Xy
           </p>
         </div>
       </footer>
